chatapp/templates/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    -
      http:
        paths:
          - backend:
              service:
               name: chatservice
               port:
                 number: 80
            path: /
            pathType: Prefix
            
---

apiVersion: v1                
kind: Service                 
metadata:                     
  name: chatservice             
spec:                         
  type: ClusterIP              
  selector:
    app: chatapp      
  ports:                      
  - port: 80
    targetPort: 8080 

---
apiVersion: apps/v1           
kind: Deployment              
metadata:
  name: chatapp           
spec:
  replicas: 1          
  selector:
    matchLabels:              
      app: chatapp
  template:                   
    metadata:
      labels:                 
        app: chatapp
    spec:                     
      containers:
      - name: chatapp
        image: containerreg3645.azurecr.io/chatapp:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
