chatapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    -
      http:
        paths:
          - backend:
              service:
               name: chat-service
               port:
                 number: 80
            path: /
            pathType: Prefix
